Server URL change

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "gamification_ui",
   "version": "1.0.0",
   "description": "Gamification UI ",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "parcel build index.html --dist-dir public"
   },
   "author": "",
   "license": "ISC",
@@ -13,7 +13,7 @@
     "parcel": "^2.10.3",
     "react": "^18.2.0",
     "react-datepicker": "^4.23.0",
-    "react-ddom": "^1.0.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
